<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.l3s.interweb</groupId>
    <artifactId>interweb-parent</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Interweb</name>

    <properties>
        <skipITs>true</skipITs>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.6.5</quarkus.platform.version>

        <surefire-plugin.version>3.2.5</surefire-plugin.version>
        <enforcer-plugin.version>3.4.1</enforcer-plugin.version>
        <dependency-plugin.version>3.6.1</dependency-plugin.version>
        <compiler-plugin.version>3.12.1</compiler-plugin.version>
        <source-plugin.version>3.3.0</source-plugin.version>
        <resources-plugin.version>3.3.1</resources-plugin.version>
        <shade-plugin.version>3.5.1</shade-plugin.version>
        <jandex-plugin.version>3.1.6</jandex-plugin.version>
        <checkstyle-plugin.version>3.3.1</checkstyle-plugin.version>
        <spotbugs-plugin.version>4.8.3.0</spotbugs-plugin.version>
    </properties>

    <modules>
        <module>interweb-core</module>
        <module>interweb-server</module>
        <module>interweb-client</module>
        <module>connectors/BingConnector</module>
        <module>connectors/FlickrConnector</module>
        <module>connectors/GiphyConnector</module>
        <module>connectors/GoogleConnector</module>
        <module>connectors/IpernityConnector</module>
        <module>connectors/OpenaiConnector</module>
        <module>connectors/SlideShareConnector</module>
        <module>connectors/VimeoConnector</module>
        <module>connectors/YouTubeConnector</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Learnweb GitHub Packages</name>
            <url>https://maven.pkg.github.com/l3s-learnweb/learnweb</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>de.l3s.interweb</groupId>
                <artifactId>interweb-core</artifactId>
                <version>4.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>io.quarkiverse.loggingsentry</groupId>
                <artifactId>quarkus-logging-sentry</artifactId>
                <version>2.0.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- A maven component that enforces minimum Java and Maven versions -->
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.8,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Provides commands to check dependency tree -->
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${dependency-plugin.version}</version>
            </plugin>
            <!-- Specifies target Java version for builds -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- Creates a jar archive with sources of the project -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source-plugin.version}</version>
            </plugin>
            <!-- Handles the copying of project resources to the output directory -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${resources-plugin.version}</version>
            </plugin>
            <!-- Runs tests before build -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${shade-plugin.version}</version>
            </plugin>
            <!-- Generates Jandex index -->
            <plugin>
                <groupId>io.smallrye</groupId>
                <artifactId>jandex-maven-plugin</artifactId>
                <version>${jandex-plugin.version}</version>
            </plugin>
            <!-- Runs linter on Java sources to check code style -->
            <plugin>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>google_checks.xml</configLocation>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <failOnViolation>true</failOnViolation>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>10.12.7</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!-- Runs static code analyser on Java sources to check for possible bugs and bad practice -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs-plugin.version}</version>
                <configuration>
                    <excludeFilterFile>.mvn/spotbugs-exclude.xml</excludeFilterFile>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs</artifactId>
                        <version>4.8.3</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
